update annotation